changes paths for images to assets/images/

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -433,7 +433,7 @@ h1 {
     max-width: 1125px;
     height: auto;
     border-radius: 15px;
-    background-image: url('3_3.png');
+    background-image: url('../images/3_3.png');
     background-repeat: no-repeat;
     background-position: left center;
     background-color: var(--black-half);
@@ -453,8 +453,8 @@ h1 {
     left: 0;
     right: 0;
     bottom: 0;
-    
-    background-image: url('3_4.png');
+
+    background-image: url('../images/3_4.png');
     background-repeat: no-repeat;
     background-position: right center;
     background-color: var(--black-half);
