--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -820,10 +820,10 @@ footer {
         max-width: 50%;
     }
 
-    .steps {
-        flex-direction: column;
-        align-items: center;
-    }
+    /*.steps {*/
+    /*    flex-direction: column;*/
+    /*    align-items: center;*/
+    /*}*/
 
     .actual-manufacturing__content-cart {
         flex: 1 1 calc(50% - 20px);
